--- a/.github/workflows/build-docker.yaml
+++ b/.github/workflows/build-docker.yaml
@@ -18,4 +18,4 @@ jobs:
     - name: Build the Docker image
       run: docker build . --file Dockerfile --tag joaolima07/python_api:$(date +%y-%m-%d_%H-%M)
     - name: Docker push
-      run: docker push tiagotele/python_api:$(date +%y-%m-%d_%H-%M)
+      run: docker push joaolima07/python_api:$(date +%y-%m-%d_%H-%M)
